--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "wfc-rs"
+authors = ["Brandon Stilson"]
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "3.2.16", features = ["derive"] }
 png = "0.17.5"
 rand = "0.8.5"
-argh = "0.1.8"
