--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2021"
 clap = { version = "3.2.16", features = ["derive"] }
 png = "0.17.5"
 rand = "0.8.5"
+
+# [profile.release]
+# debug = true
