--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ edition = "2021"
 clap = { version = "3.2.16", features = ["derive"] }
 png = "0.17.5"
 rand = "0.8.5"
+gif = "0.11.4"
+anyhow = "1.0.59"
 
-# [profile.release]
-# debug = true
+
+[profile.release]
+debug = 1
